Added google maps

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 org.gradle.parallel=true
+
+GOOGLE_MAPS_API_KEY=AIzaSyAR_nb7VT7bieK6S9PLhHd-IRlLgjIBujQ
