--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     testImplementation "junit:junit:4.12"
     testImplementation 'org.mockito:mockito-core:2.23.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 }
